Multilayer Images don't show properties in Compositor UI #65345

Closed
opened 2019-05-31 11:54:12 +02:00 by Sebastian Koenig · 4 comments

System Information
Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-31 06:33, hash: 2c4a9f7718

Short description of error
If you have a multilayer EXR in the compositor the properties panel in Compositor sidebar does not show Image info such as size and frame number. This is problmatic especially with animations since you don't know which frame of the sequence is loaded.
Only if the image was not found it shows "Cant' Load Image" and the Frame number.

Exact steps for others to reproduce the error
Open this file:
multilayer_sequence_UI.blend

It should load this multilayer image in the image node:
multilayer_image_0001.exr
Notice how no image info is displayed, however, when you go to frame 2, it shows which frame it can't load.
Compare that to any other non-multilayer image sequence: there the info is shown, as can be seen in this image:
img_sequence_UI.jpeg

**System Information** Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 73), branch: master, commit date: 2019-05-31 06:33, hash: `2c4a9f7718` **Short description of error** If you have a multilayer EXR in the compositor the properties panel in Compositor sidebar does not show Image info such as size and frame number. This is problmatic especially with animations since you don't know which frame of the sequence is loaded. Only if the image was not found it shows "Cant' Load Image" and the Frame number. **Exact steps for others to reproduce the error** Open this file: [multilayer_sequence_UI.blend](https://archive.blender.org/developer/F7081143/multilayer_sequence_UI.blend) It should load this multilayer image in the image node: ![multilayer_image_0001.exr](https://archive.blender.org/developer/F7081144/multilayer_image_0001.exr) Notice how no image info is displayed, however, when you go to frame 2, it shows which frame it can't load. Compare that to any other non-multilayer image sequence: there the info is shown, as can be seen in this image: ![img_sequence_UI.jpeg](https://archive.blender.org/developer/F7081145/img_sequence_UI.jpeg)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

The info seems to be there when you load the test file. when redrawing the screen the info is not drawn. The text is hidden when blender detected render result...

The info seems to be there when you load the test file. when redrawing the screen the info is not drawn. The text is hidden when blender detected render result...
Jeroen Bakker self-assigned this 2019-05-31 15:20:45 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65345
No description provided.